updating data clean/check

--- a/Data_Integrity_Check/Data_cleaning_script.ipynb
+++ b/Data_Integrity_Check/Data_cleaning_script.ipynb
@@ -47,12 +47,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing flickr data\n",
-    "data = pd.read_csv('tidied_threaded_data_pull.csv')"
+    "data = pd.read_csv('C://Users//csky2//Desktop//CS//FracTracker//cleaned_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating state and county columns if they arent there\n",
+    "try:\n",
+    "    data['State'] = data.st_count.apply(lambda x: x.split(', ')[1])\n",
+    "    data['County'] = data.st_count.apply(lambda x: x.split(', ')[0])\n",
+    "    data.drop(['st_count'], axis = 1, inplace = True)\n",
+    "except:\n",
+    "    pass"
    ]
   },
   {
@@ -194,8 +209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 124.63 s\n",
-      "Number of URLs with bad status: 0\n"
+      "Took 177.78 s\n",
+      "Number of URLs with bad status: 5\n"
      ]
     }
    ],
@@ -253,7 +268,16 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 0.44 s\n",
+      "Number of URLs with bad status: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Loop to recheck URLs that did not return status 200 - failsafe to double check, sometimes some of the URLs come back w bad status because of the speed of checking them/overloading flickr\n",
     "# but this is faster than individually looping through\n",
@@ -276,11 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# need to update the scrape to include albumID"
+    "# not quite sure how to do this"
    ]
   },
   {
@@ -298,24 +322,13 @@
    "source": [
     "# reading county and state shapefiles to check location matches\n",
     "# https://www.census.gov/cgi-bin/geo/shapefiles/index.php\n",
-    "counties_gdf = gpd.read_file('tl_2023_us_county/tl_2023_us_county.shp') \n",
-    "states_gdf = gpd.read_file('tl_2023_us_state/tl_2023_us_state.shp')"
+    "counties_gdf = gpd.read_file('C:/Users/csky2/Desktop/CS/FracTracker/tl_2023_us_county/tl_2023_us_county.shp') \n",
+    "states_gdf = gpd.read_file('C:/Users/csky2/Desktop/CS/FracTracker/tl_2023_us_state/tl_2023_us_state.shp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# use to test long/lat county/state checker - ONLY FOR TESTING CODE, DELETE WHEN RUNNING CHECKER ON FINAL DATASET\n",
-    "data = pd.read_csv('attribute_table.csv')\n",
-    "data.drop_duplicates(subset=['Latitude', 'Longitude', 'County', 'State'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +342,7 @@
     "        gdf_name = 'NAME'\n",
     "        print(\"Processing County Matches\")\n",
     "    elif area == \"State\":\n",
-    "        gdf_name = 'STUSPS'\n",
+    "        gdf_name = 'NAME'\n",
     "        print(\"Processing State Matches\")\n",
     "    return gdf_name\n",
     "\n",
@@ -341,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -396,16 +409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of county-coordinate mismatches due to missing data: 1299\n",
-      "Number of county-coordinate name mismatches: 93\n",
-      "Percent of data where counties are mismatched: 68.70681145113524\n"
+      "Number of county-coordinate mismatches due to missing data: 15\n",
+      "Number of county-coordinate name mismatches: 187\n",
+      "Percent of data where counties are mismatched: 7.453874538745388\n"
      ]
     }
    ],
@@ -424,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -449,16 +462,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of state-coordinate mismatches due to missing data: 45\n",
-      "Number of state-coordinate name mismatches: 83\n",
-      "Percent of data where states are mismatched: 6.317867719644619\n"
+      "Number of state-coordinate mismatches due to missing data: 15\n",
+      "Number of state-coordinate name mismatches: 16\n",
+      "Percent of data where states are mismatched: 1.1439114391143912\n"
      ]
     }
    ],
@@ -477,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,18 +509,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "counties = counties_gdf[['NAME', 'STATEFP']].apply(lambda x: x.apply(fix_text2)).rename(columns= {'NAME': 'County', 'STATEFP': 'StateID'})\n",
-    "states = states_gdf[['STUSPS', 'STATEFP']].apply(lambda x: x.apply(fix_text2)).rename(columns= {'STUSPS': 'State', 'STATEFP': 'StateID'})\n",
+    "states = states_gdf[['NAME', 'STATEFP']].apply(lambda x: x.apply(fix_text2)).rename(columns= {'NAME': 'State', 'STATEFP': 'StateID'})\n",
     "area_data = data[['County', 'State']].apply(lambda x: x.apply(fix_text2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,15 +540,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of photos with mismatched county and state: 58\n",
-      "Percent of photos with mismatched county and state: 2.8627838104639687\n"
+      "Number of photos with mismatched county and state: 137\n",
+      "Percent of photos with mismatched county and state: 5.055350553505535\n"
      ]
     }
    ],
